k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
